fix some minor things with the body and display flex to column to help the footer stay on the bottom, adjusted margin top of the footer and pixels to cover small white space that displayed at the bottom

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -6,6 +6,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -113,7 +115,7 @@ ul li {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 14%;
+    margin-top: 10%;
     align-items: baseline;
     align-content: flex-end;
     flex-wrap: wrap;
@@ -144,11 +146,11 @@ ul li {
 *.TextAreaARR {
     width: 100%;
     text-align: center;
-    background-color: #00000040;
+    background-color: #00000000;
     color: beige;
     display: flex;
-    height: 29px;
-    align-items: flex-end;
+    height: 46px;
+    align-items: center;
     justify-content: center;
 }
 
